--- a/WebApiPractices/WebApiPractices.csproj
+++ b/WebApiPractices/WebApiPractices.csproj
@@ -21,6 +21,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EmailService\EmailService.csproj" />
+    <ProjectReference Include="..\LoggerService\LoggerService.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Logs\" />
   </ItemGroup>
 
 </Project>
