Configuration global error handling

--- a/WebApiPractices/WebApiPractices.csproj
+++ b/WebApiPractices/WebApiPractices.csproj
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EmailService\EmailService.csproj" />
-    <ProjectReference Include="..\LogDB\LogDB.csproj" />
+    <ProjectReference Include="..\LogDB\LoggerService.csproj" />
   </ItemGroup>
 
   <ItemGroup>
